force-app/main/default/objects/Course_Update__c/fields/CE_Session__c.field-meta.xml
<CustomField>
    <fullName>CE_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CE-Session</label>
    <referenceTo>CE_Session__c</referenceTo>
    <relationshipLabel>Course Updates</relationshipLabel>
    <relationshipName>Course_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>