force-app/main/default/objects/Course_Update__c/fields/Course_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Course_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Students Course Enrollement</label>
    <referenceTo>Course_Enrollment__c</referenceTo>
    <relationshipLabel>Course Updates</relationshipLabel>
    <relationshipName>Course_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>