force-app/main/default/objects/Course_Update__c/listViews/Course_Update_Rec.listView-meta.xml
<ListView>
    <fullName>Course_Update_Rec</fullName>
    <columns>NAME</columns>
    <columns>CE_Module__c</columns>
    <columns>CE_Session__c</columns>
    <columns>Status__c</columns>
    <columns>Course_Enrollment__c</columns>
    <filterScope>Everything</filterScope>
    <label>Course Update Rec</label>
</ListView>